name:                digitalocean-hs
version:             0.1.0.0
synopsis:            A Haskell library for working with the DigitalOcean API
description:         This library intends to give an easy means of accessing and manipulating all parts of the DigitalOcean API.
homepage:            https://github.com/maxpow4h/digitalocean-hs

license:             BSD3
license-file:        LICENSE

author:              Maxwell Swadling, Ricky Elrod
maintainer:          maxwellswadling@gmail.com, ricky.gh@elrod.me

category:            Web, Network, Cloud
build-type:          Simple

cabal-version:       >=1.8

library
  exposed-modules:     Network.DigitalOcean
  build-depends:       base ==4.6.*, text ==0.11.*, transformers ==0.3.*, aeson ==0.6.*, bytestring ==0.10.*, http-conduit ==1.9.*, HTTP ==4000.2.*
  hs-source-dirs:      src
  
executable digitalocean-status
  main-is:	       main.hs
  build-depends:       base ==4.6.*, text ==0.11.*, transformers ==0.3.*, aeson ==0.6.*, bytestring ==0.10.*, http-conduit ==1.9.*, HTTP ==4000.2.*, boxes >=0.1.3
  hs-source-dirs:      src

