name:                digitalocean-hs
version:             0.1.0.0
synopsis:            A Haskell library for working with the DigitalOcean API
description:         This library intends to give an easy means of accessing and manipulating all parts of the DigitalOcean API. Currently only supports querying images, regions, ssh_keys and droplet sizes. Can also generate new droplets.
homepage:            https://github.com/CodeBlock/digitalocean-hs

license:             BSD3
license-file:        LICENSE

author:              Maxwell Swadling, Ricky Elrod
maintainer:          maxwellswadling@gmail.com, ricky.gh@elrod.me
copyright:	     Copyright (c) 2013, Maxwell Swadling, Copyright (c) 2013, Ricky Elrod

category:            Web, Network, Cloud
build-type:          Simple

cabal-version:       >=1.10


library
  exposed-modules:     Network.DigitalOcean
  build-depends:       base >=4.6 && <4.7, text ==0.11.*, transformers ==0.3.*, aeson ==0.6.*, bytestring ==0.10.*, http-conduit ==1.9.*, HTTP ==4000.2.*
  hs-source-dirs:      src
  default-language:    Haskell2010

executable digitalocean-status
  main-is:	       main.hs
  build-depends:       base >=4.6 && <4.7, text ==0.11.*, transformers ==0.3.*, aeson ==0.6.*, bytestring ==0.10.*, http-conduit ==1.9.*, HTTP ==4000.2.*, boxes >=0.1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
